# QR-Redirect

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: config.py  models.py
app/routes/: admin.py  auth.py  redirects.py
