[project]
name = "qr-redirect"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=26.0.0",
    "python-dotenv>=1.2.2",
    "qrcode[pil]>=8.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
